--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Rich Cordero <rich@corderophilosophy.com> (http://corderophilosophy.com/)",
   "license": "MIT",
   "devDependencies": {
+    "clean-webpack-plugin": "0.1.10",
     "css-loader": "0.24.0",
+    "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "2.22.0",
     "react": "15.3.1",
     "react-dom": "15.3.1",
