--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "clean-webpack-plugin": "0.1.10",
     "css-loader": "0.24.0",
     "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.9.0",
     "html-webpack-plugin": "2.22.0",
+    "image-webpack-loader": "2.0.0",
     "react": "15.3.1",
     "react-dom": "15.3.1",
     "react-redux": "4.4.5",
     "redux": "3.5.2",
     "style-loader": "0.13.1",
     "tachyons": "4.1.2",
+    "url-loader": "0.5.7",
     "webpack": "1.13.2",
     "webpack-dev-server": "1.15.0",
     "webpack-merge": "0.14.1",
