--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "babel-preset-react-hmre": "1.1.1",
     "clean-webpack-plugin": "0.1.10",
     "css-loader": "0.24.0",
+    "eslint": "3.4.0",
+    "eslint-plugin-react": "6.2.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.9.0",
     "html-webpack-plugin": "2.22.0",
@@ -35,6 +37,7 @@
     "webpack-validator": "2.2.7"
   },
   "dependencies": {
+    "firebase": "3.3.0",
     "react-router": "2.7.0"
   }
 }
